# mediamtx

./: .dockerignore  .gitignore  .golangci.yml  .proto-lock.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  directory.yml  docker-compose.e2e.yml  docker-compose.multi-server.yml  docker-compose.yml  go.mod  go.sum  mediamtx.yml  recorder.yml
.claude-flow/data/: pending-insights.jsonl
.claude-flow/sessions/: current.json  session-1775678191402.json  session-1775678319707.json  session-1775678414587.json  session-1775690339390.json  session-1775691448620.json  session-1775701666369.json  session-1775702318931.json  session-1775702324354.json  session-1775702339572.json  session-1775782767466.json  session-1775783179723.json  session-1775783664882.json  session-1775783822183.json  session-1775784006725.json  session-1775784401338.json  session-1775784525050.json  session-1775799094434.json  session-1775799282375.json  session-1775799528179.json  session-1775800001339.json  session-1775800179641.json  session-1775800402643.json  session-1775800605449.json  session-1775801166554.json  session-1775801456534.json  session-1775831106610.json  session-1775831158537.json  session-1775831434504.json  session-1775831799080.json  session-1775831998907.json  session-1775832618913.json  session-1775851718686.json  session-1775851870954.json  session-1775961112487.json  session-1775961189280.json  session-1776396049190.json
.claude/agents/: ai-ml-platform.md  cloud-platform.md  crosscutting-sre.md  desktop-videowall.md  devex-integrations.md  mobile-flutter.md  onprem-platform.md  security-compliance.md  tech-lead.md  web-frontend.md
.github/: cloud-services.json
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build.yml  cloud-services-build.yml  cloud-services-promote.yml  config-guard.yml  docs-portal-build.yml  flutter-build-matrix.yml  hw-compat-check.yml  idp-integration.yml  installer-build.yml  integrator-mobile-build-all.yml  integrator-mobile-build.yml  lint.yml  proto-freshness.yml  proto-lock.yml  terraform.yml  (+7 more)
.local-backup/: 2026-04-02-metadata-streaming.md  2026-04-03-backchannel-audio.md  2026-04-03-credential-rotation-design.md  2026-04-03-credential-rotation.md  mediamtx.yml
api/: openapi.yaml
cloud-portal/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboards/: README.md  customer-admin.json  integrator-portal.json  internal-on-call.json
docker/: NVR.md  cloudbroker.Dockerfile  nvr.Dockerfile
docs/: RELEASE_NOTES_TEMPLATE.md  build-pipeline.md  flutter-client-issues.md  proto-lock.md
docs-portal/: README.md  mint.json  mint.local.json.example
infra/: .gitignore  .tflint.hcl  README.md
internal/: README.md
marketing/: .env.example  .gitignore  README.md  i18n.ts  next.config.mjs  package-lock.json  package.json
scripts/: binaries.mk  buf-gen-dart.sh  build-installer.sh  check-mediamtx-config.sh  dispatch-integrator-builds.sh  hw-validate.sh  multi-server-down.sh  multi-server-up.sh  nvr-ui.mk  packaging.mk  proto-lock.sh  webui-embed.mk
sdks/: Makefile  README.md
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: quickstart.py
sdks/python/kaivue/: __init__.py  auth.py  client.py  errors.py
sdks/python/kaivue/models/: __init__.py  camera.py  event.py  integration.py  recording.py  retention.py  schedule.py  user.py
sdks/python/kaivue/services/: __init__.py  base.py  cameras.py  events.py  integrations.py  recordings.py  retention.py  schedules.py  users.py
sdks/python/tests/: test_client.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
ui-v2/: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
video-wall/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
video-wall/branding/: example-integrator.json  kaivue.json
video-wall/installer/linux/: kaivue-video-wall.appdata.xml
video-wall/installer/windows/config/: config.xml  controlscript.qs
video-wall/qml/: Main.qml
video-wall/scripts/: build-installer.sh  sign-windows.ps1
video-wall/src/: main.cpp  version.h.in
video-wall/src/collab/: ActionKind.h  CollaborationManager.cpp  CollaborationManager.h  ConflictResolver.cpp  ConflictResolver.h  CursorOverlay.cpp  CursorOverlay.h  IAuditSink.h  ICollabTransport.h  OperatorId.h  OperatorSession.h
video-wall/src/crash/: CrashReporter.cpp  CrashReporter.h
video-wall/src/layout/: .gitkeep  DisplayBus.cpp  DisplayBus.h  EventTrigger.h  FakeClock.cpp  FakeClock.h  IClock.h  IDisplayBus.h  LayoutKind.h  LayoutManager.cpp  LayoutManager.h  MonitorId.h  MonitorLayout.h  RealClock.cpp  RealClock.h  Salvo.h  Scene.h  Tour.h
video-wall/src/map/: CameraPlacementModel.cpp  CameraPlacementModel.h  FilesystemTileProvider.cpp  FilesystemTileProvider.h  HeatmapOverlay.cpp  HeatmapOverlay.h  ITileProvider.h  MapTypes.h  MapView.cpp  MapView.h  NullTileProvider.h
video-wall/src/operator/: .gitkeep
video-wall/src/ptz/: .gitkeep
video-wall/src/render/: D3D11DecoderBackend.cpp  D3D11DecoderBackend.h  D3D12Backend.cpp  D3D12Backend.h  DecodedFrame.h  FrameClock.cpp  FrameClock.h  IRenderBackend.h  NullDecoderBackend.cpp  NullDecoderBackend.h  QualityController.cpp  QualityController.h  TileGrid.cpp  TileGrid.h  VaapiDecoderBackend.cpp  VaapiDecoderBackend.h  VideoToolboxDecoderBackend.cpp  VideoToolboxDecoderBackend.h  VulkanBackend.cpp  VulkanBackend.h
video-wall/src/render/metrics/: P99LatencyProbe.cpp  P99LatencyProbe.h
video-wall/src/stream/: .gitkeep
video-wall/src/updater/: UpdateChecker.cpp  UpdateChecker.h
video-wall/tests/: CMakeLists.txt
video-wall/tests/collab/: tst_collab.cpp
video-wall/tests/map/: tst_map_view.cpp
video-wall/tests/render/: tst_p99_latency_probe.cpp  tst_render_core.cpp  tst_stress_64_streams.cpp
video-wall/tests/updater/: tst_update_checker.cpp
(+2658 files in other folders)
