[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaivue"
version = "0.1.0"
description = "KaiVue VMS Python SDK — manage cameras, recordings, events, and more"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "KaiVue Engineering", email = "sdk@kaivue.io" }]
keywords = ["kaivue", "vms", "nvr", "surveillance", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/kaivue/sdk-python"
Documentation = "https://docs.kaivue.io/sdks/python"
Repository = "https://github.com/kaivue/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["kaivue"]

[tool.ruff]
target-version = "py39"
line-length = 100
